# testing_testing_1_2_3

./: README.md  pyproject.toml  reference.txt
.github/workflows/: publish.yml
library_1/: README.md  reference.txt
library_1/src/module_1/: example.py
src/module_1/: example.py
src/module_2/: example.py
src/package_1/: module_1.py  module_3.py
src/package_2/: module_2.py
src/testing_testing_1_2_3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
testing_testing_1_2_3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
