[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testing_testing_1_2_3"
version = "0.1.1"
description = "testing out library setup in python"
authors = [
    {name = "Blake Thollaug"}
]
maintainers = [
    {name = "Blake Thollaug"}
]
requires-python = ">=3"
readme = "README.md"
keywords = ["sample", "packaging", "testing"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Main project dependencies
dependencies = [
    "numpy>=2.4",
]

# Optional dependencies (e.g., pip install ".[dev]")
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

# Defines command-line scripts (e.g., running 'my-command' in terminal)
[project.scripts]
log-m1 = "testing_testing_1_2_3.module_1:cl_f"
log-m2 = "testing_testing_1_2_3.module_2:cl_f"

# Tool-specific configurations
[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
where = ["./src"]  # Tells setuptools to look for packages in the root

